@@ -1,3 +1,7 @@
+2009-02-02  Tobias C. Rittweiler  <tcr@freebits.de>
+
+	* slime-parse.el ([test] enclosing-form-specs.1): Fix test case.
+
 2009-02-01  Tobias C. Rittweiler  <tcr@freebits.de>
 
 	Add DEFMETHOD-style extended arglist display for
